CIRC-1875 Revert whitelist